--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -92,11 +92,8 @@
 \tightlist
 \item
   I am a Research Data Specialist in the Bergelson lab where we study
-  language acquisition - babies learning language. By delegating a
-  subset of data/coding/software tasks to a dedicated specialist - me,
-  our lab improves both the handling of such tasks and the efficiency of
-  our researchers.
-\item
+  language acquisition - babies learning language. I take care of data,
+  code, and software and provide technical support in all these areas.
   My background is in Maths and Cognitive Science, so this job is
   tailor-made for me.
 \item
@@ -114,10 +111,36 @@
 \section{Current Position}\label{current-position}}
 
 \nopagebreak
-    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\newline Supervised by Elika Bergelson, Bergelson Lab, Duke University,    Durham, NC}{}{\begin{itemize}%
-\item As a Research Data Specialist, I am responsible for managing research data in various forms, including manual and automatic annotations, survey results, eye-tracking data, audio, and video. My role involves ensuring that all data  complete, up-to-date, and stored securely, while transforming it in ways that are suitable for analyzing it or making it public.%
-\item To achieve this, I maintain code in the lab's R and Python packages and write one-off scripts to automate various data manipulation tasks, ensuring that they are done in a consistent manner - across repeated runs and data subsets (e.g., participants, sessions). I am the primary point of contact for computer-related matters in the lab, I provide technical support to colleagues, helping them with code, analysis, and software troubleshooting.%
-\item I believe that my work plays an important role in supporting the success of the lab's research efforts. It is rewarding to work in an environment where my skills and expertise are valued and appreciated.%
+    \cventry{November 2021 -- Present}{Research Data Specialist (a.k.a. lab technician, associate in research, etc.)}{}{\newline Supervised by Elika Bergelson, Bergelson Lab, Duke University,    Durham, NC}{}{\empty}
+
+\hypertarget{my-responsibilities}{%
+\subsection{My Responsibilities}\label{my-responsibilities}}
+
+\nopagebreak
+    \cventry{}{As a Research Data Specialist (formally ``assosiate in research'') in Dr. Bergelson's lab, my responsibilities include, but aren't limited to:}{}{}{}{\begin{itemize}%
+\item conferring with Dr. Bergelson to review work assignments and develop plans for research experiments and make modifications to existing procedures and techniques to meet the needs of the particular studies as required%
+\item performing a variety of programming/technical duties involved in managing database data, providing technical support for code and data repositories within the university and in collaboration with PI colleagues%
+\item conducting data wrangling, cleaning, and/or analysis with relevant new/existing datasets%
+\item review laboratory methods manual, scientific journals, abstracts and other literature for information applicable to research experiments%
+\item determine and set up computers and laboratory equipment required for specific protocol%
+\item maintain GitHub repositories and other web/server needs for the lab%
+\item maintain software and laboratory equipment%
+\item review work of other laboratory personnel and assist in training new personnel%
+\item and perform other related duties incidental to the work described above%
+\end{itemize}}
+
+\medskip
+
+\hypertarget{value-i-add}{%
+\subsection{Value I Add}\label{value-i-add}}
+
+\nopagebreak
+    \cventry{}{By doing all of the above and more, I support the lab's research efforts in several important ways:}{}{}{}{\begin{itemize}%
+\item We can implement more ideas that require considerate technical effort and would otherwise have to be postponed or canceled%
+\item We partially off-load technical work from my colleagues to me which both makes that work done more robustly and frees my colleagues' time to handle the non-technical, core aspects of their research%
+\item I improve the smoothness of lab's operation by taking care of the lab's data, code, and technical documentation, and providing technical support to my colleagues%
+\item Through code review and advice, I improve my colleagues' technical skills%
+\item I save hours of manual labor by automating repetitive tasks%
 \end{itemize}}
 
 \hypertarget{academic-experience}{%
