--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -251,16 +251,13 @@
 \subsection{MOOCs}\label{moocs}}
 
 \nopagebreak
-    \cventry{}{\href{https://www.coursera.org/learn/datasciencemathskills}{Data Science Math Skills}}{Coursera, online}{2020}{}{\begin{itemize}%
-\item This course covered high-school maths. Honestly, this was an attempt at productive procrastination during the COVID-19 lockdown. \href{https://coursera.org/share/d06128df3dbf0ed99de987da0d257f09}{Certificate.}%
-\end{itemize}}
     \cventry{}{\href{https://www.coursera.org/learn/designexperiments}{Designing, Running, and Analyzing Experiments}}{Coursera, online}{2018}{}{\begin{itemize}%
 \item \href{https://coursera.org/share/13d8627b09f871715aec86dcd7dd0fbe}{Certificate.}%
 \end{itemize}}
     \cventry{}{\href{https://www.coursera.org/learn/discrete-calculus}{Single Variable Calculus (5 courses)}}{Coursera, online}{2018}{}{\begin{itemize}%
 \item In addition to being a refresher of Calculus 101, this course taught me discrete approximation for differential equation solutions. Completed, no certificate.%
 \end{itemize}}
-    \cventry{}{\href{https://www.coursera.org/specializations/data-science-python}{Applied Data Science with Python specialization}}{Coursera, online}{2017}{}{\begin{itemize}%
+    \cventry{}{\href{https://www.coursera.org/specializations/data-science-python}{Applied Data Science with Python specialization (5 courses)}}{Coursera, online}{2017}{}{\begin{itemize}%
 \item Five courses covering basics of data manipulation, text mining, machine learning, social network analysis, plotting and data representation. \href{https://coursera.org/share/cb4c8abff922cf688a98cc30d55cff1a}{Certificate.}%
 \end{itemize}}
     \cventry{}{\href{https://classroom.udacity.com/courses/cs101}{Intro to Computer Science}}{Udacity, online}{2014}{}{\begin{itemize}%
