--- a/cv/moderncv.cls
+++ b/cv/moderncv.cls
@@ -245,6 +245,10 @@
 % usage: \homepage{<url>}
 \newcommand*{\homepage}[1]{\def\@homepage{#1}}
 
+% define's one's pronouns (optional)
+% usage: \pronouns{<pronouns>}
+\newcommand*{\pronouns}[1]{\def\@pronouns{#1}}
+
 % adds a fixed/mobile/fax number to one's personal information (optional)
 % usage: \phone[<optional type>]{<number>}
 % where <optional type> should be either "fixed" (default), "mobile" or "fax
@@ -273,6 +277,7 @@
       \ifthenelse{\equal{#1}{bitbucket}}{\collectionadd[bitbucket]{socials}{\protect\httpslink[#3]{www.bitbucket.org/#3}}}   {}%
       \ifthenelse{\equal{#1}{orcid}}   {\collectionadd[orcid]{socials}   {\protect\httpslink[#3]{orcid.org/#3}}}   {}%
       \ifthenelse{\equal{#1}{researchgate}}   {\collectionadd[researchgate]{socials}   {\protect\httpslink[#3]{www.researchgate.net/profile/#3}}}   {}%
+      \ifthenelse{\equal{#1}{googlescholar}}   {\collectionadd[googlescholar]{socials}   {\protect\httpslink[#3]{scholar.google.com/citations?user=#3}}}   {}%
       \ifthenelse{\equal{#1}{researcherid}}   {\collectionadd[researcherid]{socials}   {\protect\httpslink[#3]{www.researcherid.com/rid/#3}}}   {}%
     }
     {\collectionadd[#1]{socials}{\protect\httplink[#3]{#2}}}}
@@ -305,6 +310,7 @@
 % other symbols
 \newcommand*{\listitemsymbol}      {\labelitemi~}
 \newcommand*{\addresssymbol}       {}
+\newcommand*{\pronounssymbol}      {{\small\faComment}~}
 \newcommand*{\mobilephonesymbol}   {}
 \newcommand*{\fixedphonesymbol}    {}
 \newcommand*{\faxphonesymbol}      {}
@@ -321,12 +327,24 @@
 \newcommand*{\orcidsocialsymbol}   {}
 \newcommand*{\researchgatesocialsymbol}{}
 \newcommand*{\researcheridsocialsymbol}{}
-\newcommand*{\googlescholarsocialsymbol}{}
+\newcommand*{\researchidsocialsymbol}{}
+\newcommand*{\googlescholarsocialsymbol}{\faGoogle~}
 \newcommand*{\telegramsocialsymbol}{}
 \newcommand*{\whatsappsocialsymbol}{}
 \newcommand*{\signalsocialsymbol}{}
 \newcommand*{\matrixsocialsymbol}{}
 \newcommand*{\bornsymbol}{}
+\newcommand{\mastodonsocialsymbol}{\faMastodon}
+\newcommand{\discordsocialsymbol}{\faDiscord}
+\newcommand{\twitchsocialsymbol}{\faTwich}
+\newcommand{\youtubesocialsymbol}{\faYoutube}
+\newcommand{\tiktoksocialsymbol}{\faTiktoksocialsymbol}
+\newcommand{\instagramsocialsymbol}{\faInstagramsocialsymbol}
+\newcommand{\soundcloudsocialsymbol}{\faSoundcloudsocialsymbol}
+\newcommand{\steamsocialsymbol}{\faSteamsocialsymbol}
+\newcommand{\xboxsocialsymbol}{\faxboxsocialsymbol}
+\newcommand{\playstationsocialsymbol}{\faPlaystationsocialsymbol}
+\newcommand{\battlenetsocialsymbol}{\faBattlenesocialsymbol}
 
 % other
 %------
@@ -370,7 +388,7 @@
 % usage: \moderncvcolor{<color scheme name>}
 \newcommand*{\moderncvcolor}[1]{%
   \RequirePackage{moderncvcolor#1}}
-  
+
 % loads an icons set
 % usage: \moderncvicons{<icon set name>}
 \newcommand*{\moderncvicons}[1]{%
